@@ -4,3 +4,4 @@ obj/
 *.dll
 *.suo
 *.xml
+*.pidb
