@@ -21,7 +21,9 @@
     <File name="testconsole.exe.config" subtype="Code" buildaction="FileCopy" />
   </Contents>
   <References>
-    <ProjectReference type="Project" localcopy="True" refto="xmpp" />
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+    <ProjectReference type="Project" localcopy="True" refto="ubiety" />
+    <ProjectReference type="Project" localcopy="True" refto="ubiety.compression.sharpziplib" />
+    <ProjectReference type="Project" localcopy="True" refto="ubiety.compression.zlib" />
   </References>
 </Project>
