@@ -23,7 +23,6 @@
     <File name="gtk-gui/MainWindow.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
-    <ProjectReference type="Project" localcopy="True" refto="xmpp" />
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
     <ProjectReference type="Gac" localcopy="True" refto="Mono.Posix, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
     <ProjectReference type="Gac" localcopy="True" refto="mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
@@ -32,8 +31,9 @@
     <ProjectReference type="Gac" localcopy="True" refto="glib-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <ProjectReference type="Gac" localcopy="True" refto="glade-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <ProjectReference type="Gac" localcopy="True" refto="pango-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
-    <ProjectReference type="Project" localcopy="True" refto="xmpp.compression.zlib" />
-    <ProjectReference type="Project" localcopy="True" refto="xmpp.compression.sharpziplib" />
+    <ProjectReference type="Project" localcopy="True" refto="ubiety" />
+    <ProjectReference type="Project" localcopy="True" refto="ubiety.compression.sharpziplib" />
+    <ProjectReference type="Project" localcopy="True" refto="ubiety.compression.zlib" />
   </References>
   <GtkDesignInfo gtkVersion="2.12.0" />
 </Project>
